♻️ refactor(User): Cookie 방식으로 변경 (#4)